--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@usedapp/core": "^1.2.2",
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
