--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
+    "url": "^0.11.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
